@@ -1,6 +1,7 @@
 # TODO
 
 - networking details
+  - getifaddrs(3)
 - add statfs(2)
 - add to show_sizeof():
   - intN_t group   
@@ -18,6 +19,7 @@
 - add process arguments to show_proc_branch()?
 - sort output of show_mounts().
 - use CPUID instruction to detect XEN environments?
+  (http://libcpuid.sourceforge.net/)
 - use dlopen to probe for apparmor/selinux. This avoids having to depend
   on the existence of the appropriate libs, but still allows security
   context information to be queried on systems that provide them.
