@@ -1,4 +1,4 @@
-.TH PROCENV "1" "2012-11-29" "User Commands"
+.TH PROCENV "1" "2013-07-16" "User Commands"
 .\"
 .SH NAME
 procenv \- display process environment details
@@ -337,7 +337,7 @@ Kees Cook
 .RB < kees@ubuntu.com > "" "."
 .\"
 .SH COPYRIGHT
-Copyright \(co 2012 James Hunt
+Copyright \(co 2012-2013 James Hunt
 .RB < james.hunt@ubuntu.com >
 and
 Kees Cook
